tests/rosetta/out/Erlang/ackermann-function-2.erl
#!/usr/bin/env escript
%% Generated by Mochi compiler v0.10.30 on 2025-07-18T17:21:17Z
% ackermann-function-2.erl - generated from ackermann-function-2.mochi

pow(Base, Exp) ->
    Result0 = 1,
    I0 = 0,
    {Result1, I1} = (fun Loop0(Result, I) -> case (I < Exp) of true -> Result1 = (Result * Base), I1 = (I + 1), Loop0(Result1, I1); _ -> {Result, I} end end)(Result0, I0),
    Result1.

ackermann2(M, N) ->
    case (M == 0) of true -> (N + 1); _ -> case (M == 1) of true -> (N + 2); _ -> case (M == 2) of true -> ((2 * N) + 3); _ -> case (M == 3) of true -> ((8 * pow(2, N)) - 3); _ -> case (N == 0) of true -> ackermann2((M - 1), 1); _ -> ackermann2((M - 1), ackermann2(M, (N - 1))) end end end end end.

main() ->
    io:format("~p~n", ["A(0, 0) = " ++ lists:flatten(io_lib:format("~p", [ackermann2(0, 0)]))]),
    io:format("~p~n", ["A(1, 2) = " ++ lists:flatten(io_lib:format("~p", [ackermann2(1, 2)]))]),
    io:format("~p~n", ["A(2, 4) = " ++ lists:flatten(io_lib:format("~p", [ackermann2(2, 4)]))]),
    io:format("~p~n", ["A(3, 4) = " ++ lists:flatten(io_lib:format("~p", [ackermann2(3, 4)]))]).

main(_) ->
    main().
